--- a/manifest/statefulset.yaml
+++ b/manifest/statefulset.yaml
@@ -19,14 +19,14 @@ spec:
          # command:
           #  - /bin/sh
            # - -c
-           # - "for i in $(seq -s ' ' 1 60); do if getent hosts zoo.default; then exit 0; fi; sleep 1; done; exit 1"
+           # - "for i in $(seq -s ' ' 1 60); do if getent hosts zoo1:2181,zoo2:2181,zoo3:2181.default; then exit 0; fi; sleep 1; done; exit 1"
       containers:
         - name: kafka
           image: wurstmeister/kafka:latest 
           command: ["/usr/local/bin/entrypoint.sh"]
           env:
             - name: ZOOKEEPER 
-              value: "zoo1:2181,zoo2:2181,zoo3:2181,"
+              value: "zoo1:2181,zoo2:2181,zoo3:2181"
             - name: DISCOVERY 
               value: zoo 
             - name: POD_IP
