--- a/manifest/statefulset.yaml
+++ b/manifest/statefulset.yaml
@@ -12,7 +12,6 @@ spec:
       labels:
         component: kafka
     spec:
-      serviceAccountName: admin
       terminationGracePeriodSeconds: 10
       #initContainers:
        # - name: init 
@@ -23,13 +22,15 @@ spec:
            # - "for i in $(seq -s ' ' 1 60); do if getent hosts zoo1:2181,zoo2:2181,zoo3:2181.default; then exit 0; fi; sleep 1; done; exit 1"
       containers:
         - name: kafka
-          image: gmt.reg.me/test/kafka:latest 
+          image: wurstmeister/kafka:latest 
           command: ["/usr/local/bin/entrypoint.sh"]
           env:
             - name: ZOOKEEPER 
               value: "zoo1:2181,zoo2:2181,zoo3:2181"
             - name: DISCOVERY 
               value: zoo 
+            - name: DATABASE 
+              value: http://database-headless.database:8080/api/svc/db 
             - name: POD_IP
               valueFrom:
                 fieldRef:
